--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ D:/git/make_gitignore/Makefile
 D:/git/make_gitignore/Makefile.Debug
 D:/git/make_gitignore/Makefile.Release
 D:/git/make_gitignore/README.md
+1.txt
